handle_support_function_add_log_common_request
